# midgard_client

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: config.ron  settings.ron
assets/models/: poring.glb  rock.glb
crates/asset_loading/: Cargo.toml
crates/asset_loading/src/: lib.rs  ron.rs  tracking.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: camera.rs  dev_tools.rs  lib.rs  sound.rs
crates/game/src/combat/: mod.rs
crates/game/src/enemy/: animation.rs  behaviours.rs  control.rs  mod.rs
crates/game/src/event/: emitters.rs  mod.rs  triggers.rs  types.rs
crates/game/src/player/: animation.rs  control.rs  mod.rs
crates/game/src/utils/: mod.rs
crates/models/: Cargo.toml
crates/models/src/: attributes.rs  enemy.rs  event_dispatch.rs  input.rs  keybinding.rs  lib.rs  palette.rs  player.rs  pre_load.rs  primitives.rs  settings.rs  states.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs  skybox.rs
crates/screens/: Cargo.toml
crates/screens/src/: credits.rs  gameplay.rs  lib.rs  loading.rs  settings.rs  splash.rs  title.rs
crates/ui/: Cargo.toml
crates/ui/src/: interaction.rs  lib.rs  opts.rs  perf.rs  widget.rs
crates/ui/src/prefabs/: keybind_editor.rs  mod.rs  settings.rs
src/: main.rs
