[package]
name = "audio"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_seedling.workspace = true
ron.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
firewheel-web-audio = { git = "https://github.com/CorvusPrudens/firewheel-web-audio" }


[lints]
workspace = true
