[package]
name = "game"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [ "dev_native" ]
dev_native = [
    "bevy-inspector-egui",          # Entity inspector
]

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
models = { path = "../models" }
scene = { path = "../scene" }
ui = { path = "../ui" }

bevy-inspector-egui = { version = "0.31.0", optional = true }

avian3d.workspace = true
bevy.workspace = true
bevy_seedling.workspace = true
bevy-tnua.workspace = true
bevy-tnua-avian3d.workspace = true
bevy_third_person_camera.workspace = true
bevy_fix_gltf_coordinate_system.workspace = true
bevy_enhanced_input.workspace = true
itertools.workspace = true
rand.workspace = true

[lints]
workspace = true
