[package]
name = "models"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_seedling.workspace = true
bevy_enhanced_input.workspace = true
ron.workspace = true
serde.workspace = true

[lints]
workspace = true
