[package]
name = "screens"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
game = { path = "../game" }
models = { path = "../models" }
scene = { path = "../scene" }
ui = { path = "../ui" }

bevy.workspace = true
bevy_seedling.workspace = true
bevy_enhanced_input.workspace = true

[lints]
workspace = true
